Bug 396799 Menus on the Application menu bar sometimes claim to be menuitems r=enndeakin, aaronleventhal sr=neil a=dsicore